cut off text in input fixed  by min-width

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -11,6 +11,7 @@
 }
 
 .footer__input {
+	min-width: min-content;
 	width: 100%;
 	padding-left: 20px;
 
